--- a/content/post/dataeng_arch.adoc
+++ b/content/post/dataeng_arch.adoc
@@ -16,11 +16,17 @@ categories:
 :rouge-css: style
 :rouge-style: github
 
+This is one of those _you had to be there_ moments. If you come into the world of data and analytics engineering today, ELT is just what it is and is pretty much universally understood. But if you've been around for …_waves hands_… longer than that, you might be confused by what people are calling ELT and ETL. Well, I was ✋. 
+
 <!--more-->
 
-## ELT vs ETL vs E(t)LT vs ᵉ𝓛ᴛⷮ🅔Eͤᵗᴸ (_I made the last one up—I hope_)
+As https://twitter.com/SeattleDataGuy[SeattleDataGuy] put it when I shared my link:/2022/09/14/data-engineering-in-2022-storage-and-access/[previous article]: 
 
-This is one of those _you had to be there_ moments. If you come into the world of data and analytics engineering today, ELT is just what it is and is pretty much universally understood. But if you've been around for …_waves hands_… longer than that, you might be confused by what people are calling ELT and ETL. Well, I was ✋. 
++++
+<div class="tenor-gif-embed" data-postid="12272188" data-share-method="host" data-aspect-ratio="1.34" data-width="100%"><a href="https://tenor.com/view/spongebob-how-many-times-do-we-need-to-teach-you-old-man-slow-thick-gif-12272188">Spongebob How Many Times Do We Need To Teach You GIF</a>from <a href="https://tenor.com/search/spongebob-gifs">Spongebob GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
++++
+
+## ELT vs ETL vs E(t)LT vs ᵉ𝓛ᴛⷮ🅔Eͤᵗᴸ (_I made the last one up—I hope_)
 
 My starting point for understanding ETL and ELT is what I already knew from a decade ago. The de facto approach to building a datawarehouse had been **ETL**. You'd run an ETL server with something like https://datacadamia.com/dit/powercenter/powercenter[Informatica PowerCenter], which would **E**xtract the data from a source system, **T**ransform it, and then **L**oad it to the target datawarehouse. 
 
@@ -48,9 +54,9 @@ Regardless of how the data gets loaded, `$Tool_2` (dbt being the obvious one her
 
 image::/images/2022/09/t.jpg[T high level view]
 
-dbt's own repo spells it out nicely too: 
+https://raw.githubusercontent.com/dbt-labs/dbt-core/202cb7e51e218c7b29eb3b11ad058bd56b7739de/etc/dbt-transform.png[dbt's own repo] spells it out nicely too - here it is with my **EL** and **T** annotations added: 
 
-image::https://raw.githubusercontent.com/dbt-labs/dbt-core/202cb7e51e218c7b29eb3b11ad058bd56b7739de/etc/dbt-transform.png[dbt high-level view]
+image::/images/2022/10/dbt1.png[dbt high-level view]
 
 ## Simple? Mostly. Marketing Bollocks? Not entirely. 
 
