--- a/content/post/dataeng_arch.adoc
+++ b/content/post/dataeng_arch.adoc
@@ -65,9 +65,13 @@ Another nuance to what I described above is discussed in https://twitter.com/esa
 
 {{< tweet 1567343640934232064 >}}
 
-The 💡 statement is this one from https://twitter.com/teej_m/[TJ], also quoting James Densmore:  
+The 💡 statement is this one from https://twitter.com/teej_m/[TJ]
 
 {{< tweet 1567347745387872257 >}}
+
+TJ also quotes James Densmore from last year: 
+
+{{< tweet 1367204759137103877 >}}
 
 From this I took the point that ETL/ELT is not *just* about _where_ the work gets executed, but *also* about _what_ gets executed, namely the business logic. By extension it is also about *who* is responsible for it (and by further extension, to whom the supporting tools need to be targetted at supporting). 
 
@@ -87,9 +91,9 @@ image::/images/2022/09/t2.jpg[T high level view]
 
 ## Reference Architectures
 
-OK, so that's my confusion over ETL/ELT cleared up. It's as it was before, but with added nuance and separate toolsets today. My next point of interest was comparing how approaches to the stages of data handling, including in published reference architectures for data at a high level compared. 
+OK, so that's my confusion over ETL/ELT cleared up. It's as it was before, but with added nuance and separate toolsets today. My next point of interest was looking at how approaches to the stages of data handling, including in published reference architectures for data at a high level compared. 
 
-You see, some things change…and some things stay the same. 9 years ago Oracle published their https://www.oracle.com/technetwork/database/bigdata-appliance/overview/bigdatarefarchitecture-2297765.pdf[reference archicture for Information Management and Big Data]. Whilst bits of it haven't aged so well, the core concept of how data is sourced, stored, and served seems to match up almost exactly with Databricks' https://www.databricks.com/glossary/medallion-architecture["Medallion Architecture"]. Which is a good thing - trends come and go but if as an industry we've settled on a common approach then it makes everyone's lives easier!
+You see, some things change…and some things stay the same. 9 years ago Oracle published their https://www.oracle.com/technetwork/database/bigdata-appliance/overview/bigdatarefarchitecture-2297765.pdf[reference archicture for Information Management and Big Data]. Whilst bits of it haven't aged so well, the core concept of how data is sourced, stored, and served **seems to match up almost exactly with Databricks'** https://www.databricks.com/glossary/medallion-architecture["Medallion Architecture"]. Which is a good thing - trends come and go but if as an industry we've settled on a common approach then it makes everyone's lives easier!
 
 
 [cols="1,1,1"]
@@ -112,13 +116,15 @@ You see, some things change…and some things stay the same. 9 years ago Oracle 
 
 image::/images/2022/09/db_vs_ora_ra.jpg[link="/images/2022/09/db_vs_ora_ra.jpg",alt="Extract from Oracle's Information Management and Big Data Reference Architecture compared to Databricks' Medallion Architecture diagram"]
 
-Oracle have published two updates since the one that I reference above, in https://www.oracle.com/technetwork/topics/entarch/articles/oea-big-data-guide-1522052.pdf[2016] and https://docs.oracle.com/en/solutions/oci-curated-analysis/index.html[2022].
+_Oracle have published two updates since the one that I reference above, in https://www.oracle.com/technetwork/topics/entarch/articles/oea-big-data-guide-1522052.pdf[2016] and https://docs.oracle.com/en/solutions/oci-curated-analysis/index.html[2022]._
 
 
 
 '''
 
 ## Data Engineering in 2022
+
+Check out my other posts in this series 👇️
 
 * link:/2022/09/14/stretching-my-legs-in-the-data-engineering-ecosystem-in-2022/[Introduction]
 * link:/2022/09/14/data-engineering-in-2022-storage-and-access/[Storage and Access]
