Mark blog as published, and add into index links

--- a/content/post/dataeng_dbt_duckdb.adoc
+++ b/content/post/dataeng_dbt_duckdb.adoc
@@ -1,5 +1,5 @@
 ---
-draft: true
+draft: false
 title: 'Data Engineering in 2022: Exploring dbt with DuckDB'
 date: "2022-10-20T17:07:04Z"
 image: "/images/2022/10/h_IMG_8370.jpeg"
@@ -1106,3 +1106,15 @@ With dozens of https://docs.getdbt.com/docs/supported-data-platforms[adaptors] y
 * https://courses.getdbt.com/collections[dbt Training]
 * https://docs.getdbt.com/community/join[dbt Community]
 
+'''
+
+## Data Engineering in 2022
+
+* link:/2022/09/14/stretching-my-legs-in-the-data-engineering-ecosystem-in-2022/[Introduction]
+* link:/2022/09/14/data-engineering-in-2022-storage-and-access/[Storage and Access]
+* link:/2022/09/16/data-engineering-in-2022-exploring-lakefs-with-jupyter-and-pyspark/[Exploring LakeFS with Jupyter and PySpark]
+* link:/2022/10/02/data-engineering-in-2022-architectures-terminology/[Architectures & Terminology]
+// * link:/2022/10/20/data-engineering-in-2022-exploring-dbt-with-duckdb/[Exploring dbt with DuckDB]
+* Query & Transformation Engines [TODO]
+* ETL/ELT tools & Orchestration [TODO]
+* link:/2022/09/14/data-engineering-resources/[Resources]
