--- a/content/post/dataeng_etl.adoc
+++ b/content/post/dataeng_etl.adoc
@@ -32,9 +32,4 @@ image::/images/2022/09/km_in_action.gif[Oracle Data Integrator overview]
 
 ## Data Engineering in 2022
 
-* link:/2022/09/14/stretching-my-legs-in-the-data-engineering-ecosystem-in-2022/[Stretching my Legs]
-* link:/2022/09/14/data-engineering-in-2022-storage-and-access/[Storage and Access]
-* Query & Transformation Engines
-* ETL/ELT tools & Orchestration
-* Architectures & Terminology
-* link:/2022/09/14/data-engineering-resources/[Resources]
+TODO INDEX HERE
