--- a/content/post/dataeng_storage_access.adoc
+++ b/content/post/dataeng_storage_access.adoc
@@ -177,6 +177,7 @@ _I kicked the tyres on LakeFS and wrote about it link:/2022/09/16/data-engineeri
 // * link:/2022/09/14/data-engineering-in-2022-storage-and-access/[Storage and Access]
 * link:/2022/09/16/data-engineering-in-2022-exploring-lakefs-with-jupyter-and-pyspark/[Exploring LakeFS with Jupyter and PySpark]
 * link:/2022/10/02/data-engineering-in-2022-architectures-terminology/[Architectures & Terminology]
+* link:/2022/10/20/data-engineering-in-2022-exploring-dbt-with-duckdb/[Exploring dbt with DuckDB]
 * Query & Transformation Engines [TODO]
 * ETL/ELT tools & Orchestration [TODO]
 * link:/2022/09/14/data-engineering-resources/[Resources]
