--- a/content/post/dataeng_intro.adoc
+++ b/content/post/dataeng_intro.adoc
@@ -114,6 +114,7 @@ What I'm going to do is dig into some of the particular areas that have caught m
 * link:/2022/09/14/data-engineering-in-2022-storage-and-access/[Storage and Access]
 * link:/2022/09/16/data-engineering-in-2022-exploring-lakefs-with-jupyter-and-pyspark/[Exploring LakeFS with Jupyter and PySpark]
 * link:/2022/10/02/data-engineering-in-2022-architectures-terminology/[Architectures & Terminology]
+* link:/2022/10/20/data-engineering-in-2022-exploring-dbt-with-duckdb/[Exploring dbt with DuckDB]
 * Query & Transformation Engines [TODO]
 * ETL/ELT tools & Orchestration [TODO]
 * link:/2022/09/14/data-engineering-resources/[Resources]
