Smarten up the opening para

--- a/content/post/dataeng_dbt_duckdb.adoc
+++ b/content/post/dataeng_dbt_duckdb.adoc
@@ -11,9 +11,14 @@ categories:
 - DuckDB
 ---
 
-The https://github.com/dbt-labs/jaffle_shop_duckdb[DuckDB-based demo of dbt] was interesting to me on two fronts. Firstly, I was looking to try dbt hands-on whilst offline (airplane wifi is sucky/non-existant) so wanted something that would be self-contained locally and not need dbt cloud, BigQuery or any other cloud datawarehouse - and since it uses DuckDB it fits the bill (geddit?!) perfectly. Secondly, https://duckdb.org/[DuckDB] had appeared on my radar recently and I was keen to check it out. I had a play around with it link:/2022/10/14/current-22-session-analysis-with-duckdb-and-jupyter-notebook/[in a notebook previously], so this is my second article using it.
+I've been wanting to try out dbt for some time now, and a recent long-haul flight seemed like the obvious opportunity to do so. Except many of the tutorials with dbt that I found were based on using Cloud, and airplane WiFi is generally sucky or non-existant. Then I found the https://github.com/dbt-labs/jaffle_shop_duckdb[DuckDB-based demo of dbt], which seemed to fit the bill (🦆 geddit?!) perfectly, since DuckDB runs locally. In addition, https://duckdb.org/[DuckDB] had appeared on my radar recently and I was keen to check it out. 
 
-The https://github.com/dbt-labs/jaffle_shop_duckdb/blob/duckdb/README.md[README] is comprehensive and well-written. Kudos to the author for providing copy-paste for _all_ the steps needed to get set up including an isolated Python virtual environment. 
+<!--more-->
+
+_I also had a play around with DuckDB link:/2022/10/14/current-22-session-analysis-with-duckdb-and-jupyter-notebook/[in a notebook recently]_.
+
+
+The https://github.com/dbt-labs/jaffle_shop_duckdb/blob/duckdb/README.md[README] for https://github.com/dbt-labs/jaffle_shop_duckdb[jaffle_shop_duckdb] is comprehensive and well-written. Kudos to the author for providing copy-paste for _all_ the steps needed to get set up including an isolated Python virtual environment. 
 
 My starting point for this was pretty much zero knowledge of dbt, and I used this opportunity to poke around it and understand it better. I could go and read the https://docs.getdbt.com/[docs] and the https://courses.getdbt.com/[training material], but that'd be too obvious ;) 
 
