--- a/content/post/dataeng_dbt_duckdb.adoc
+++ b/content/post/dataeng_dbt_duckdb.adoc
@@ -15,12 +15,12 @@ I've been wanting to try out dbt for some time now, and a recent long-haul fligh
 
 <!--more-->
 
-_I also had a play around with DuckDB link:/2022/10/14/current-22-session-analysis-with-duckdb-and-jupyter-notebook/[in a notebook recently]_.
-
-
 The https://github.com/dbt-labs/jaffle_shop_duckdb/blob/duckdb/README.md[README] for https://github.com/dbt-labs/jaffle_shop_duckdb[jaffle_shop_duckdb] is comprehensive and well-written. Kudos to the author for providing copy-paste for _all_ the steps needed to get set up including an isolated Python virtual environment. 
 
 My starting point for this was pretty much zero knowledge of dbt, and I used this opportunity to poke around it and understand it better. I could go and read the https://docs.getdbt.com/[docs] and the https://courses.getdbt.com/[training material], but that'd be too obvious ;) 
+
+NOTE: _If you're interested in DuckDB make sure to also check out the noodling around with it that I did link:/2022/10/14/current-22-session-analysis-with-duckdb-and-jupyter-notebook/[in a notebook recently]_.
+
 
 ## Mach Speed
 
