--- a/content/post/dataeng_storage_access.adoc
+++ b/content/post/dataeng_storage_access.adoc
@@ -178,6 +178,7 @@ _I kicked the tyres on LakeFS and wrote about it link:/2022/09/16/data-engineeri
 * link:/2022/09/16/data-engineering-in-2022-exploring-lakefs-with-jupyter-and-pyspark/[Exploring LakeFS with Jupyter and PySpark]
 * link:/2022/10/02/data-engineering-in-2022-architectures-terminology/[Architectures & Terminology]
 * link:/2022/10/20/data-engineering-in-2022-exploring-dbt-with-duckdb/[Exploring dbt with DuckDB]
+* link:/2022/10/24/data-engineering-in-2022-wrangling-the-feedback-data-from-current-22-with-dbt[Wrangling the feedback data from Current 22 with dbt]
 * Query & Transformation Engines [TODO]
 * ETL/ELT tools & Orchestration [TODO]
 * link:/2022/09/14/data-engineering-resources/[Resources]
