Change link for ELT reference

--- a/content/post/dataeng_intro.adoc
+++ b/content/post/dataeng_intro.adoc
@@ -49,7 +49,7 @@ _It was maybe not as neat as this, with various elements of "shadow IT" springin
 
 Extracts were usually once a day. Operational Data Stores were becoming a bit trendy then along with 'micro-batch' extracts which meant data coming maybe more frequently, e.g. 5-10 minutes
 
-Tools were the traditional ETL lot (Informatica, Data Stage, etc), with Oracle's Data Integrator (neé Sunopsis) bringing the concept of ELT in which instead of buying servers (e.g. Informatica) to run the Transform, you took advantage of the target database's ability to crunch data by loading the data into the database in one set of tables, transform it there, and load it into another set of tables. Nowadays https://twitter.com/esammer/status/1567547892927442944[ELT is not such a clear-cut concept] (for non-obvious reasons)
+Tools were the traditional ETL lot (Informatica, Data Stage, etc), with Oracle's Data Integrator (neé Sunopsis) bringing the concept of ELT in which instead of buying servers (e.g. Informatica) to run the Transform, you took advantage of the target database's ability to crunch data by loading the data into the database in one set of tables, transform it there, and load it into another set of tables. Nowadays link:/2022/10/02/data-engineering-in-2022-architectures-terminology/[ELT is not such a clear-cut concept] (for non-obvious reasons)
 
 Data modeling was an important part, as was the separation of logical and physical at both the ELT stage (ODI) and reporting (e.g. OBIEE's semantic layer). 
 
